# rs-ndarray

./: Cargo.toml  README.md
src/: darray.rs  lib.rs  ndarray.rs  ndarray_builder.rs
tests/: test.rs
